fixing images width for moblie screen

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -82,7 +82,7 @@
 
 @media only screen and (max-width: 800px) {
   .projectList {
-    width: 100%;
+    width: auto;
   }
   .projectItem {
     width: 300px;
