--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -33,9 +33,10 @@
 .projectList {
   width: 70vw;
   height: auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  place-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
 }
   
 /* MENU ITEM STYLING */
@@ -44,7 +45,7 @@
   border-radius: 15px;
   width: 300px;
   height: 300px;
-  margin: 40px;
+  margin: 50px;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
   text-align: center;
 }
@@ -77,11 +78,6 @@
 @media only screen and (max-width: 800px) {
   .projectList {
     grid-template-columns: 1fr;
-  }
-}
-
-@media only screen and (max-width: 800px) {
-  .projectList {
     width: auto;
   }
   .projectItem {
