--- a/src/styles/ProjectDisplay.css
+++ b/src/styles/ProjectDisplay.css
@@ -1,28 +1,53 @@
-.project {
+/* .projects {
     width: 100%;
     height: calc(100vh - 100px);
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-  }
+} */
   
-  .project h1 {
-    margin-top: 50px;
-    color: #3e497a;
-    font-size: 35px;
-  }
-  .project img {
-    width: 700px;
-    border-radius: 10px;
-  }
+.projects img {
+  width: 100%;
+  border-radius: 10px;
+}
   
-  .project p {
+.projects p {
+  color: black;
+}
+  
+.projects svg {
+  font-size: 60px;
+  color: black;
+}
+
+ /*  the enclosed CSS styles will only apply when the screen width is 770 pixels or less */
+@media only screen and (max-width: 770px) {
+
+  .projects h1 {
+    font-size: 20px;
+  }
+  .projects p {
+    font-size: 15px;
+  }
+  .projects svg {
     font-size: 40px;
-    color: #3e497a;
+    color: black;
   }
-  
-  .project svg {
-    font-size: 60px;
-    color: #3e497a;
+
+}
+
+/*  the enclosed CSS styles will only apply when the screen width is 600 pixels or less */
+@media only screen and (max-width: 600px) {
+
+  .projects h1 {
+    font-size: 20px;
   }
+  .projects p {
+    font-size: 15px;
+  }
+  .projects svg {
+    font-size: 25px;
+    color: black;
+  }
+}
