--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -21,7 +21,7 @@
 .about h2 {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 50px;
-  color: #cab336;
+  color: white;
   height: 50px;
 }
 
@@ -49,7 +49,7 @@
 }
 
 .skills h1 {
-  color: #3e497a;
+  color: black;
 }
 
 .skills .list {
@@ -59,6 +59,14 @@
 
 .list span {
   font-size: 20px;
+}
+
+.item h2 {
+  color: black;
+}
+
+.item span {
+  color:#3e497a;
 }
 
 /*  the enclosed CSS styles will only apply when the screen width is 770 pixels or less */
