adding fill effect on svg icons when hover over

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -18,6 +18,11 @@
   cursor: pointer;
 }
 
+.socialMedia a:hover svg {
+  fill: rgb(67, 67, 219); 
+  transition: 0.5s;
+}
+
 /* @ 2024 Jai Vang */
 .footer p {
   color: white;
