--- a/src/styles/ProjectDisplay.css
+++ b/src/styles/ProjectDisplay.css
@@ -36,6 +36,11 @@
   color: black;
 }
 
+.projects a:hover svg {
+  fill: rgb(67, 67, 219); 
+  transition: 0.5s;
+}
+
 .projects a img {
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
 }
